fixed flicker issue for navbar navigation

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,7 +1,3 @@
-html {
-  scroll-behavior: smooth;
-}
-
 .container {
   display: flex;
   flex-direction: column;
@@ -17,13 +13,13 @@ body {
 
 .header {
   justify-content: center;
-  width: 80%;
+  width: 100%;
 }
 
 .header-middle {
   position: fixed;
   display: flex;
-  width: 80%;
+  width: 100%;
   justify-content: space-evenly;
   border-bottom-right-radius: 25px;
   border-bottom-left-radius: 25px;
